--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,12 @@
   <script>
     window.jQuery = window.$ = require('jquery');
   </script>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div class="container h-100">
+      <div class="row h-100 justify-content-center align-items-center">
+        <div class="lds-facebook"><div></div><div></div><div></div></div>
+      </div>
+    </div>
+  </app-root>
 </body>
 </html>
